--- a/style.css
+++ b/style.css
@@ -209,11 +209,11 @@ section {
   padding: 10px 20px;
   font-size: 16px;
   background-color: #23b5d3;
-  color: #ffffff; /* Choose your preferred text color */
+  color: #ffffff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s ease; /* Smooth transition for the background color */
+  transition: background-color 0.3s ease;
 }
 
 .cv:hover {
